tests/negative/test_mac_redef_local.orb
mac foo () {
    ret ();
};

fnc main () () {
    mac::global foo () {
        ret ();
    };
};